Bug 1664558 - Improve layers id logging in layer tree. r=botond

Depends on D94894

Differential Revision: https://phabricator.services.mozilla.com/D94895